--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 
 </head>
 <body>
+    <!-- coler and bg coler start -->
     <h1 class="text-orange-600 bg-slate-300">HLW</h1>
     <H3 class="text-amber-950 bg-yellow-400">Hellow</H3>
     <p class="text-lime-500 bg-red-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolorem nesciunt cupiditate fuga perspiciatis! Quibusdam ut dolores itaque, totam vitae rem rerum nemo ipsam omnis, vero sint hic? Aliquid, assumenda.</p>
+     <!-- coler and bg coler end -->
+      <!-- font size -->
+    <p class="text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, officiis optio. Optio, consequuntur, molestias vero facere rem iure doloremque quis nam unde commodi nulla possimus corrupti ex sequi expedita dicta.</p>
+    <!-- font family -->
+    <h1 class="font-serif">hellow world</h1>
 </body>
 </html>
