--- a/index.html
+++ b/index.html
@@ -11,11 +11,27 @@
     <!-- coler and bg coler start -->
     <h1 class="text-orange-600 bg-slate-300">HLW</h1>
     <H3 class="text-amber-950 bg-yellow-400">Hellow</H3>
-    <p class="text-lime-500 bg-red-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolorem nesciunt cupiditate fuga perspiciatis! Quibusdam ut dolores itaque, totam vitae rem rerum nemo ipsam omnis, vero sint hic? Aliquid, assumenda.</p>
+    <p class="text-lime-500 bg-red-100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolorem nesciunt cupiditate fuga perspiciatis! Quibusdam ut dolores itaque, totam vitae rem rerum nemo ipsam omnis, vero sint hic? Aliquid, assumenda.</p> <br>
      <!-- coler and bg coler end -->
       <!-- font size -->
-    <p class="text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, officiis optio. Optio, consequuntur, molestias vero facere rem iure doloremque quis nam unde commodi nulla possimus corrupti ex sequi expedita dicta.</p>
+    <p class="text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, officiis optio. Optio, consequuntur, molestias vero facere rem iure doloremque quis nam unde commodi nulla possimus corrupti ex sequi expedita dicta.</p> <br>
     <!-- font family -->
     <h1 class="font-serif">hellow world</h1>
+    <h1 class="font-mono">hello world</h1>
+    <h1 class="font-sans">hellow world</h1> <br>
+    <!-- font weight -->
+     <p class="font-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, laboriosam?</p>
+     <p class="font-extralight">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+     <!-- text align -->
+      <h1 class="text-right">hellow world</h1>
+      <h1 class="text-start">hellow world</h1>
+      <h1 class="text-justify">hellow world</h1> <br>
+      <!-- text decoration -->
+       <h1 class="underline">hellow world</h1> 
+       <h1 class="overline">hellow world</h1>
+       <h1 class="line-through">hellow world</h1>
+       <h1 class="no-underline">hellow world</h1>
+
+
 </body>
 </html>
